--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 
 <body>
@@ -40,7 +40,7 @@
         <section class="contenedorArticuloPrincipal shadow container">
             <div class="card row">
                 <div class="card-body col-12">
-                    <h1 class="card-title imprimimosTusIdeas">Imprimimos tus ideas</h1>
+                    <h1 class="card-title tituloPrincipal">Imprimimos tus ideas</h1>
                     <p>La impresión 3D permite materializar objetos de una manera simple y económica ampliando los
                         límites del diseño y ofreciendo innumerables posibilidades para la industria, la medicina y
                         prácticamente todas las disciplinas.</p>
@@ -56,7 +56,7 @@
                         desarrollo e innovación se acelerará significativamente.</p>
                 </div>
                 <div class="col-12 col-md-6 col-lg-6 ">
-                    <img class="imgArticuloSecundario" src="./imagenes/tiempoDeComersalizacion.jpg" data-aos="zoom-in"
+                    <img class="imgArticuloSecundario w-100" src="./imagenes/tiempoDeComersalizacion.jpg" data-aos="zoom-in"
                         data-aos-duration="3000" alt="imagen tiempo de comercialización">
                 </div>
             </div>
@@ -178,7 +178,7 @@
                 </div>
             </div>
         </section>
-
+$
     </main>
 
     <aside class="logoWhatsapp">
