--- a/paginas/productos.html
+++ b/paginas/productos.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../css/main.css">
     <title>Productos</title>
 </head>
 
@@ -52,8 +52,8 @@
                         <img src="../imagenes/trabajosMuestra1.jpg"
                             alt="imagen dispenser latas de cervesa impreso en 3d">
                         <div class="card-body">
-                            <h5 class="card-title">Dispenser latas de cervesa</h5>
-                            <p class="card-text">Precio: 2500$</p>
+                            <h5 class="card-title">Dispenser latas de cerveza</h5>
+                            <p class="card-text">Precio: $2500</p>
                             <a href="https://www.mercadolibre.com" target="_blank" class="btn btn-primary">Comprar</a>
                         </div>
                     </div>
@@ -63,7 +63,7 @@
                         <img src="../imagenes/trabajosMuestra2.jpg" alt="imagen maseta machupichu impresa en 3d">
                         <div class="card-body">
                             <h5 class="card-title">Maseta Machupichu</h5>
-                            <p class="card-text">Precio: 4800$</p>
+                            <p class="card-text">Precio: $4800</p>
                             <a href="https://www.mercadolibre.com" target="_blank" class="btn btn-primary">Comprar</a>
                         </div>
                     </div>
@@ -73,7 +73,7 @@
                         <img src="../imagenes/trabajosMuestra4.jpg" alt="imagen repisa octagonal impresa en 3d">
                         <div class="card-body">
                             <h5 class="card-title">Repisa octagoal</h5>
-                            <p class="card-text">Precio: 1800$</p>
+                            <p class="card-text">Precio: $1800</p>
                             <a href="https://www.mercadolibre.com" target="_blank" class="btn btn-primary">Comprar</a>
                         </div>
                     </div>
@@ -83,7 +83,7 @@
                         <img src="../imagenes/trabajosMuestra5.jpg" alt="imagen porta ariculares impreso en 3D">
                         <div class="card-body">
                             <h5 class="card-title">Porta auricular</h5>
-                            <p class="card-text">Precio: 2450$</p>
+                            <p class="card-text">Precio: $2450</p>
                             <a href="https://www.mercadolibre.com" target="_blank" class="btn btn-primary">Comprar</a>
                         </div>
                     </div>
