--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Impresión 3D</title>
+    <meta name="keywords" content="servicios de impresión 3d, impresión 3d, impresión de archivos stl, proceso de impresión FDM, impresión de consolas, souvenirs impresos en 3D, tiempo de comercialización más rápido, creación rápida de prototipos, desarrollo e innovación, producción de piezas en pequeña o gran escala, Thengiverse, Cults, 3Dmakers">
+    <meta name="description" content="En IMPRESIÓN3D nos dedicamos a darle vida a tus proyectos, desde el diseño hasta la materialización del mismo." >
+    <title>Impresión 3D - INICIO</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
@@ -35,6 +37,7 @@
             </div>
         </nav>
     </header>
+
     <main>
         <img class="imagenPrincipal" src="./imagenes/Imagen1.png" alt="imagen principal impresora3d">
         <section class="contenedorArticuloPrincipal shadow container">
@@ -56,8 +59,8 @@
                         desarrollo e innovación se acelerará significativamente.</p>
                 </div>
                 <div class="col-12 col-md-6 col-lg-6 ">
-                    <img class="imgArticuloSecundario w-100" src="./imagenes/tiempoDeComersalizacion.jpg" data-aos="zoom-in"
-                        data-aos-duration="3000" alt="imagen tiempo de comercialización">
+                    <img class="imgArticuloSecundario w-100" src="./imagenes/tiempoDeComersalizacion.jpg"
+                        data-aos="zoom-in" data-aos-duration="3000" alt="imagen tiempo de comercialización">
                 </div>
             </div>
         </section>
@@ -194,7 +197,7 @@
             <li><a href="https://www.linkedin.com" target="_blank"><i class="bi bi-linkedin"></i></a></li>
         </ul>
     </footer>
-    
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
         crossorigin="anonymous"></script>
