--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="servicios de impresión 3d, impresión 3d, impresión de archivos stl, proceso de impresión FDM, impresión de consolas, souvenirs impresos en 3D, tiempo de comercialización más rápido, creación rápida de prototipos, desarrollo e innovación, producción de piezas en pequeña o gran escala, Thengiverse, Cults, 3Dmakers">
+    <meta name="description" content="Pontee en contacto con IMPRESIÓN3D, déjanos un mensaje y con justo nos ponemos en contacto con vos para comenzar tu proyecto." >
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../css/main.css">
-    <title>Contacto</title>
+    <title>Impresión 3D - CONTACTO</title>
 </head>
 
 <body>
@@ -53,16 +55,16 @@
                         <h2>Formulario de contacto</h2>
                     </div>
                     <div class="form-floating mb-3">
-                        <input type="text" class="form-control" id="floatingInput" placeholder="name@example.com">
-                        <label for="floatingInput">Nombre</label>
+                        <input type="text" class="form-control" id="floatingInputNombre" placeholder="name@example.com">
+                        <label for="floatingInputNombre">Nombre</label>
                     </div>
                     <div class="form-floating mb-3">
-                        <input type="text" class="form-control" id="floatingInput" placeholder="name@example.com">
-                        <label for="floatingInput">Apellido</label>
+                        <input type="text" class="form-control" id="floatingInputApellido" placeholder="name@example.com">
+                        <label for="floatingInputApellido">Apellido</label>
                     </div>
                     <div class="form-floating mb-3">
-                        <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-                        <label for="floatingInput">Email</label>
+                        <input type="email" class="form-control" id="floatingInputEmail" placeholder="name@example.com">
+                        <label for="floatingInputEmail">Email</label>
                     </div>
                     <div class="form-check mb-3">
                         <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
