--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -47,29 +47,44 @@
             </div>
         </section>
 
-        <section class=" container-fluid">
+        <section class=" container shadow">
             <div class="row servicioImpresión3d">
-                <div class="col-12 col-md-6 col-lg-6 textoServicioImpresión3d ">
+                <div class="col-10 col-md-6 col-lg-6 textoServicioImpresión3d ">
                     <h2>Servicios de impresión 3D</h2>
                     <p>Vos nos pasas tu archivo stl y nosotros lo configuramos para optimizar la impresión, luego le
                         damos vida en nuestro mundo tridimencional :D</p>
                 </div>
-                <div class="col-12 col-md-6 col-lg-6 contenedorImagenServicioImpresión3d">
+                <div class="col-10 col-md-6 col-lg-6 contenedorImagenServicioImpresión3d">
                     <img class="imagenServicioImpresión3d" src="../imagenes/impresión3d.gif"
                         alt="Imagen gif impresora imprimiendo una mano">
                 </div>
             </div>
         </section>
 
-        <section class="container-fluid">
+        <section class="container shadow">
             <div class="row servicioDiseño3d">
-                <div class="col-12 col-md-6 col-lg-6 textoServicioDiseño3d">
+                <div class="col-10 col-md-6 col-lg-6 textoServicioDiseño3d">
                     <h2>Servicios de diseño 3D</h2>
-                    <p>Pasanos la idea de tu proyecto y nosotros le damos forma.</p>
+                    <p>Si no tenés el modelo 3D del objeto que querés imprimir, <span> nosotros te lo diseñamos.</span> En el proceso de diseño tenemos en cuenta todas las características del objeto y la manera que se va a imprimir, para que la pieza impresa final tenga la mejor calidad posible.</p>
                 </div>
-                <div class="col-12 col-md-6 col-lg-6 ">
+                <div class="col-10 col-md-6 col-lg-6 ">
                     <img class="imagenServicioDiseño3d" src="../imagenes/servisioDiseño3d.jpg"
                         alt="Imagen diseñando un archivo para imprimir en 3d">
+                </div>
+
+            </div>
+        </section>
+
+        <section class="container archivosFormatos">
+            <div class="row">
+                <div class="col-12 col-md-2 col-lg-2 contenedorImagen">
+                    <img src="../imagenes/ícono_stl-150x150.png" alt="icono stl">
+                </div>
+                <div class="col-12 col-md-10 col-lg-10c contenedorTexto">
+                    <h2>Archivos y formatos</h2>
+                    <p>Para proceder a imprimir, primero debemos tener un archivo digital del modelo del objeto que se quiere imprimir. Este archivo debe estar en formato .STL para que podamos agilizar los tiempos y empezar a imprimir lo antes posible.
+                        Todos los programas CAD trabajan con este formato, y pueden exportar fácilmente modelos en 3D.</p>
+
                 </div>
 
             </div>
