--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -5,11 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="servicios de impresión 3d, impresión 3d, impresión de archivos stl, proceso de impresión FDM, impresión de consolas, souvenirs impresos en 3D, tiempo de comercialización más rápido, creación rápida de prototipos, desarrollo e innovación, producción de piezas en pequeña o gran escala, Thengiverse, Cults, 3Dmakers">
-    <meta name="description" content="En IMPRESIÓN3D ofrecemos servicios de diseño e impresión 3d y tambien la posibilidad de imprimirlos con el tipo de plastico que requiera." >
+    <meta name="keywords"
+        content="servicios de impresión 3d, impresión 3d, impresión de archivos stl, proceso de impresión FDM, impresión de consolas, souvenirs impresos en 3D, tiempo de comercialización más rápido, creación rápida de prototipos, desarrollo e innovación, producción de piezas en pequeña o gran escala, Thengiverse, Cults, 3Dmakers">
+    <meta name="description"
+        content="En IMPRESIÓN3D ofrecemos servicios de diseño e impresión 3d y tambien la posibilidad de imprimirlos con el tipo de plastico que requiera.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/main.css">
     <title>Impresión 3D - SERVICIOS</title>
 </head>
@@ -39,22 +42,25 @@
 
     <main>
 
-        <section class="container-fluid articuloInicioServicios ">
+        <section class="container-fluid articuloInicioServicios">
             <div class="row">
                 <div class="col-12">
                     <h1>SERVICIOS</h1>
+                    <p>
+                        No pierdas tiempo, envianos tu proyecto y recibí tu presupuesto al instante.
+                    </p>
                 </div>
             </div>
         </section>
 
         <section class=" container shadow">
-            <div class="row servicioImpresión3d">
-                <div class="col-10 col-md-6 col-lg-6 textoServicioImpresión3d ">
+            <div class="row servicioImpresión3d" data-aos="fade-right" data-aos-duration="3000">
+                <div class="col-8 col-md-6 col-lg-6 textoServicioImpresión3d "  >
                     <h2>Servicios de impresión 3D</h2>
                     <p>Vos nos pasas tu archivo stl y nosotros lo configuramos para optimizar la impresión, luego le
                         damos vida en nuestro mundo tridimencional :D</p>
                 </div>
-                <div class="col-10 col-md-6 col-lg-6 contenedorImagenServicioImpresión3d">
+                <div class="col-8 col-md-6 col-lg-6 contenedorImagenServicioImpresión3d">
                     <img class="imagenServicioImpresión3d" src="../imagenes/impresión3d.gif"
                         alt="Imagen gif impresora imprimiendo una mano">
                 </div>
@@ -62,10 +68,12 @@
         </section>
 
         <section class="container shadow">
-            <div class="row servicioDiseño3d">
+            <div class="row servicioDiseño3d" data-aos="fade-left" data-aos-duration="3000">
                 <div class="col-10 col-md-6 col-lg-6 textoServicioDiseño3d">
                     <h2>Servicios de diseño 3D</h2>
-                    <p>Si no tenés el modelo 3D del objeto que querés imprimir, <span> nosotros te lo diseñamos.</span> En el proceso de diseño tenemos en cuenta todas las características del objeto y la manera que se va a imprimir, para que la pieza impresa final tenga la mejor calidad posible.</p>
+                    <p>Si no tenés el modelo 3D del objeto que querés imprimir, <span> nosotros te lo diseñamos.</span>
+                        En el proceso de diseño tenemos en cuenta todas las características del objeto y la manera que
+                        se va a imprimir, para que la pieza impresa final tenga la mejor calidad posible.</p>
                 </div>
                 <div class="col-10 col-md-6 col-lg-6 ">
                     <img class="imagenServicioDiseño3d" src="../imagenes/servisioDiseño3d.jpg"
@@ -82,12 +90,108 @@
                 </div>
                 <div class="col-12 col-md-10 col-lg-10c contenedorTexto">
                     <h2>Archivos y formatos</h2>
-                    <p>Para proceder a imprimir, primero debemos tener un archivo digital del modelo del objeto que se quiere imprimir. Este archivo debe estar en formato .STL para que podamos agilizar los tiempos y empezar a imprimir lo antes posible.
-                        Todos los programas CAD trabajan con este formato, y pueden exportar fácilmente modelos en 3D.</p>
-
+                    <p>Para proceder a imprimir, primero debemos tener un archivo digital del modelo del objeto que se
+                        quiere imprimir. Este archivo debe estar en formato .STL para que podamos agilizar los tiempos y
+                        empezar a imprimir lo antes posible.
+                        Todos los programas CAD trabajan con este formato, y pueden exportar fácilmente modelos en 3D.
+                    </p>
                 </div>
-
             </div>
+        </section>
+
+        <section class="accordion container contenedorAccordion " id="accordionExample">
+
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingOne">
+                    <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        MATERIALES
+                    </button>
+                </h2>
+                <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                    data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        <p>
+                            En IMPRESIÓN3D, actualmente disponemos de los siguientes materiales:
+                        </p>
+                        <P>
+                            <strong>ABS:</strong> Es un plástico muy resistente al impacto. Se utiliza en la industria
+                            automotriz, en la
+                            fabricación de juguetes, en electrodomésticos, y por supuesto en la impresión 3D. Es el
+                            resultado de la sinergia de 3 monómeros, obteniendo las mejores propiedades de cada uno de
+                            ellos.
+                        </P>
+                        <P>
+                            <strong>PLA:</strong> Es un poliéster alifático termoplástico derivado de recursos
+                            renovables, de productos
+                            tales como almidón de maíz, mandioca o caña de azúcar. Se puede biodegradar bajo ciertas
+                            condiciones, tales como la presencia de oxígeno.
+                        </P>
+                        <P>
+                            <strong>PLA MAX:</strong> El PLA MAX ha sido formulado con aditivos especiales que le
+                            otorgan propiedades muy
+                            superiores al PLA convencional. Con él se obtienen piezas impresas de muy alta estabilidad
+                            dimensional.
+                        </P>
+                        <P>
+                            <strong>FLEX:</strong> Este material permite la creación de piezas elásticas. Maximiza las
+                            posibilidades de
+                            tu idea, creando piezas que requieran absorción de golpes, amortiguación, etc. Ideal para
+                            crear zapatillas, sandalias y fundas para celulares.
+                        </P>
+                        <P>
+                            <strong>PC/ABS:</strong> Es una mezcla de policarbonato (PC) y acrilonitrilo butadieno
+                            estireno (ABS), de la
+                            sinergia de ambos se obtiene una combinación de la alta resitencia al calor y a los impactos
+                            (policarbonato) y de excepcional procesabilidad (ABS), aún mayor que la del PC o el ABS por
+                            separados. Las piezas impresas con PC/ABS tendrán: alta resistencia a los impactos incluso a
+                            temperaturas bajas, alta resistencia, alta rigidez, baja contracción total y alta precisión
+                            dimensional. Este material es muy sensible a la humedad, por lo cual es muy importante
+                            mantenerlo en un envase hermético con desecante.
+                        </P>
+                    </div>
+                </div>
+            </div>
+
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingTwo">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                        COLORES
+                    </button>
+                </h2>
+                <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                    data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        <p>
+                            Cada material dispone de su propia gama de colores según el diámetro de su filamento, por lo
+                            que algunos colores podrían no estar disponibles en otro material o tamaño.
+                        </p>
+                        <p>
+                            <strong>ABS:</strong> Natural, blanco, amarillo, rosa, fucsia, naranja, rojo, violeta, verde
+                            ninja, verde, celeste, azul, chocolate, gris, negro. Metalizados: Uva, verde militar,
+                            cobalto, plata, dorado.
+                        </p>
+                        <P>
+                            <strong>PLA:</strong> Natural, blanco, piel, amarillo, rosa, fucsia, naranja, rojo, violeta,
+                            verde ninja, verde, celeste, azul, chocolate, gris, negro. Metalizados: Uva, verde militar,
+                            cobalto, cobre, plata, dorado. Traslúcidos: Amarillo, rojo, verde, azul.
+                        </P>
+                        <P>
+                            <strong>PLA MAX:</strong> Natural, blanco, rojo, azul, gris, negro.
+                        </P>
+                        <P>
+                            <strong>FLEX:</strong> Cristal, blanco, amarillo, rosa, fucsia, naranja, rojo, violeta,
+                            verde ninja, verde, celeste, azul, chocolate, gris, negro. Metalizados: Uva, verde militar,
+                            cobalto, plata, dorado. Flúo: Amarillo, rojo, verde. Traslúcidos: Rojo, verde, azul.
+                        </P>
+                        <P>
+                            <strong>PC/ABS:</strong> Natural, blanco, gris, negro.
+                        </P>
+                    </div>
+                </div>
+            </div>
+
         </section>
 
     </main>
@@ -112,6 +216,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
         crossorigin="anonymous"></script>
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
