--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -55,7 +55,7 @@
 
         <section class=" container shadow">
             <div class="row servicioImpresión3d" data-aos="zoom-in" data-aos-duration="3000">
-                <div class="col-8 col-md-6 col-lg-6 textoServicioImpresión3d "  >
+                <div class="col-8 col-md-6 col-lg-6 textoServicioImpresión3d ">
                     <h2>Servicios de impresión 3D</h2>
                     <p>Vos nos pasas tu archivo stl y nosotros lo configuramos para optimizar la impresión, luego le
                         damos vida en nuestro mundo tridimencional :D</p>
@@ -114,41 +114,69 @@
                         <p>
                             En IMPRESIÓN3D, actualmente disponemos de los siguientes materiales:
                         </p>
-                        <P>
-                            <strong>ABS:</strong> Es un plástico muy resistente al impacto. Se utiliza en la industria
-                            automotriz, en la
-                            fabricación de juguetes, en electrodomésticos, y por supuesto en la impresión 3D. Es el
-                            resultado de la sinergia de 3 monómeros, obteniendo las mejores propiedades de cada uno de
-                            ellos.
-                        </P>
-                        <P>
-                            <strong>PLA:</strong> Es un poliéster alifático termoplástico derivado de recursos
-                            renovables, de productos
-                            tales como almidón de maíz, mandioca o caña de azúcar. Se puede biodegradar bajo ciertas
-                            condiciones, tales como la presencia de oxígeno.
-                        </P>
-                        <P>
-                            <strong>PLA MAX:</strong> El PLA MAX ha sido formulado con aditivos especiales que le
-                            otorgan propiedades muy
-                            superiores al PLA convencional. Con él se obtienen piezas impresas de muy alta estabilidad
-                            dimensional.
-                        </P>
-                        <P>
-                            <strong>FLEX:</strong> Este material permite la creación de piezas elásticas. Maximiza las
-                            posibilidades de
-                            tu idea, creando piezas que requieran absorción de golpes, amortiguación, etc. Ideal para
-                            crear zapatillas, sandalias y fundas para celulares.
-                        </P>
-                        <P>
-                            <strong>PC/ABS:</strong> Es una mezcla de policarbonato (PC) y acrilonitrilo butadieno
-                            estireno (ABS), de la
-                            sinergia de ambos se obtiene una combinación de la alta resitencia al calor y a los impactos
-                            (policarbonato) y de excepcional procesabilidad (ABS), aún mayor que la del PC o el ABS por
-                            separados. Las piezas impresas con PC/ABS tendrán: alta resistencia a los impactos incluso a
-                            temperaturas bajas, alta resistencia, alta rigidez, baja contracción total y alta precisión
-                            dimensional. Este material es muy sensible a la humedad, por lo cual es muy importante
-                            mantenerlo en un envase hermético con desecante.
-                        </P>
+                        <ul>
+                            <li>
+                                <P>
+                                    <strong>ABS:</strong> Es un plástico muy resistente al impacto. Se utiliza en la
+                                    industria
+                                    automotriz, en la
+                                    fabricación de juguetes, en electrodomésticos, y por supuesto en la impresión 3D. Es
+                                    el
+                                    resultado de la sinergia de 3 monómeros, obteniendo las mejores propiedades de cada
+                                    uno de
+                                    ellos.
+                                </P>
+                            </li>
+                            <li>
+                                <P>
+                                    <strong>PLA:</strong> Es un poliéster alifático termoplástico derivado de recursos
+                                    renovables, de productos
+                                    tales como almidón de maíz, mandioca o caña de azúcar. Se puede biodegradar bajo
+                                    ciertas
+                                    condiciones, tales como la presencia de oxígeno.
+                                </P>
+                            </li>
+                            <li>
+                                <P>
+                                    <strong>PLA MAX:</strong> El PLA MAX ha sido formulado con aditivos especiales que
+                                    le
+                                    otorgan propiedades muy
+                                    superiores al PLA convencional. Con él se obtienen piezas impresas de muy alta
+                                    estabilidad
+                                    dimensional.
+                                </P>
+                            </li>
+                            <li>
+                                <P>
+                                    <strong>FLEX:</strong> Este material permite la creación de piezas elásticas.
+                                    Maximiza
+                                    las
+                                    posibilidades de
+                                    tu idea, creando piezas que requieran absorción de golpes, amortiguación, etc. Ideal
+                                    para
+                                    crear zapatillas, sandalias y fundas para celulares.
+                                </P>
+                            </li>
+                            <li>
+                                <P>
+                                    <strong>PC/ABS:</strong> Es una mezcla de policarbonato (PC) y acrilonitrilo
+                                    butadieno
+                                    estireno (ABS), de la
+                                    sinergia de ambos se obtiene una combinación de la alta resitencia al calor y a los
+                                    impactos
+                                    (policarbonato) y de excepcional procesabilidad (ABS), aún mayor que la del PC o el
+                                    ABS
+                                    por
+                                    separados. Las piezas impresas con PC/ABS tendrán: alta resistencia a los impactos
+                                    incluso a
+                                    temperaturas bajas, alta resistencia, alta rigidez, baja contracción total y alta
+                                    precisión
+                                    dimensional. Este material es muy sensible a la humedad, por lo cual es muy
+                                    importante
+                                    mantenerlo en un envase hermético con desecante.
+                                </P>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -167,27 +195,45 @@
                             Cada material dispone de su propia gama de colores según el diámetro de su filamento, por lo
                             que algunos colores podrían no estar disponibles en otro material o tamaño.
                         </p>
-                        <p>
-                            <strong>ABS:</strong> Natural, blanco, amarillo, rosa, fucsia, naranja, rojo, violeta, verde
-                            ninja, verde, celeste, azul, chocolate, gris, negro. Metalizados: Uva, verde militar,
-                            cobalto, plata, dorado.
-                        </p>
-                        <P>
-                            <strong>PLA:</strong> Natural, blanco, piel, amarillo, rosa, fucsia, naranja, rojo, violeta,
-                            verde ninja, verde, celeste, azul, chocolate, gris, negro. Metalizados: Uva, verde militar,
-                            cobalto, cobre, plata, dorado. Traslúcidos: Amarillo, rojo, verde, azul.
-                        </P>
-                        <P>
-                            <strong>PLA MAX:</strong> Natural, blanco, rojo, azul, gris, negro.
-                        </P>
-                        <P>
-                            <strong>FLEX:</strong> Cristal, blanco, amarillo, rosa, fucsia, naranja, rojo, violeta,
-                            verde ninja, verde, celeste, azul, chocolate, gris, negro. Metalizados: Uva, verde militar,
-                            cobalto, plata, dorado. Flúo: Amarillo, rojo, verde. Traslúcidos: Rojo, verde, azul.
-                        </P>
-                        <P>
-                            <strong>PC/ABS:</strong> Natural, blanco, gris, negro.
-                        </P>
+                        <ul>
+                            <li>
+                                <p>
+                                    <strong>ABS:</strong> Natural, blanco, amarillo, rosa, fucsia, naranja, rojo,
+                                    violeta, verde
+                                    ninja, verde, celeste, azul, chocolate, gris, negro. Metalizados: Uva, verde
+                                    militar,
+                                    cobalto, plata, dorado.
+                                </p>
+                            </li>
+                            <li>
+                                <P>
+                                    <strong>PLA:</strong> Natural, blanco, piel, amarillo, rosa, fucsia, naranja, rojo,
+                                    violeta,
+                                    verde ninja, verde, celeste, azul, chocolate, gris, negro. Metalizados: Uva, verde
+                                    militar,
+                                    cobalto, cobre, plata, dorado. Traslúcidos: Amarillo, rojo, verde, azul.
+                                </P>
+                            </li>
+                            <li>
+                                <P>
+                                    <strong>PLA MAX:</strong> Natural, blanco, rojo, azul, gris, negro.
+                                </P>
+                            </li>
+                            <li>
+                                <P>
+                                    <strong>FLEX:</strong> Cristal, blanco, amarillo, rosa, fucsia, naranja, rojo,
+                                    violeta,
+                                    verde ninja, verde, celeste, azul, chocolate, gris, negro. Metalizados: Uva, verde
+                                    militar,
+                                    cobalto, plata, dorado. Flúo: Amarillo, rojo, verde. Traslúcidos: Rojo, verde, azul.
+                                </P>
+                            </li>
+                            <li>
+                                <P>
+                                    <strong>PC/ABS:</strong> Natural, blanco, gris, negro.
+                                </P>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -216,7 +262,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
         crossorigin="anonymous"></script>
-        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
     </script>
